# p2proxy

./: .gitignore  .gitleaksignore  Cargo.toml  Readme.md  deny.toml
.cargo/: config.toml
.github/workflows/: main.yml
.local/: cfg.toml  client.hex  client.key
assets/: Privacypolicy.md  p2proxyd.service
assets/config/: extensive.toml  simple.toml
assets/deployment/: build-debian.sh
assets/testing/: ci.sh  has-access-private-client.key  superuser-client.key  testing-extensive.key  testing-simple.key
p2proxy-cli/: Cargo.toml  Readme.md
p2proxy-cli/src/: main.rs  observability.rs
p2proxy-client/: Cargo.toml
p2proxy-client/src/: killswitch.rs  lib.rs
p2proxy-desktop/: Cargo.toml  Readme.md  Todo.md  cross.toml
p2proxy-desktop/src/: main.rs  observability.rs  peer_id.rs  peer_node_state.rs  secret_key_input.rs
p2proxy-lib/: Cargo.toml  Todo.md
p2proxy-lib/src/: lib.rs  proto.rs  proxy_copy_buf.rs
p2proxy-test-runner/: Cargo.toml
p2proxy-test-runner/src/: build.rs  main.rs  shell.rs  tests.rs
p2proxy-test-runner/src/tests/: extensive.rs  simple.rs
p2proxy-test-server/: Cargo.toml
p2proxy-test-server/src/: main.rs
p2proxy_fl/: Todo.md  pubspec.yaml
p2proxy_fl/android/app/: build.gradle.kts
p2proxy_fl/android/app/src/debug/: AndroidManifest.xml
p2proxy_fl/android/app/src/main/: AndroidManifest.xml
p2proxy_fl/android/app/src/main/kotlin/dev/mgrass/p2proxy/p2proxy_fl/: MainActivity.kt
p2proxy_fl/android/app/src/main/res/drawable-v21/: launch_background.xml
p2proxy_fl/android/app/src/main/res/mipmap-anydpi-v26/: p2proxy_launcher.xml
p2proxy_fl/android/app/src/main/res/raw/: keep.xml
p2proxy_fl/android/app/src/main/res/values-night/: colors.xml
p2proxy_fl/assets/: p2proxy48-short.piskel  p2proxy48.piskel
p2proxy_fl/integration_test/: simple_test.dart
p2proxy_fl/lib/: main.dart
p2proxy_fl/lib/src/: activate_endpoint.dart  colorscheme.dart  copy_on_click.dart  error_toast.dart  manage_keys.dart  manage_nodes.dart  node.dart  notifications.dart  storage.dart  view.dart
p2proxy_fl/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
p2proxy_fl/lib/src/rust/api/: endpoint.dart  tokens.dart
p2proxy_fl/rust/: Cargo.toml
p2proxy_fl/rust/src/: frb_generated.rs
p2proxy_fl/rust/src/api/: endpoint.rs  mod.rs  setup.rs  tokens.rs
p2proxy_fl/rust_builder/: pubspec.yaml
p2proxy_fl/rust_builder/android/: build.gradle  settings.gradle
p2proxy_fl/rust_builder/android/src/main/: AndroidManifest.xml
p2proxyd/: Cargo.toml  Readme.md  Todo.md
p2proxyd/src/: access_log.rs  configuration.rs  main.rs  proto.rs  proxy.rs
p2proxyd/src/configuration/: test.rs
p2proxyd/src/proto/: connection.rs
