[package]
name = "p2proxy-cli"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
p2proxy-lib = { workspace = true }
p2proxy-client = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
