[package]
name = "p2proxy-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
p2proxy-lib = { workspace = true }

anyhow = { workspace = true }
iroh = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
