[package]
name = "p2proxy-desktop"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
p2proxy-lib = { workspace = true }
p2proxy-client = { workspace = true }

anyhow = { workspace = true }
hex = { workspace = true }
iced = { workspace = true }
iced_core = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }
opener = { workspace = true }
rfd = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
