[package]
name = "p2proxy-desktop"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "A desktop client to host a local server which connects to a p2proxyd proxy"

[dependencies]
p2proxy-lib = { workspace = true }
p2proxy-client = { workspace = true }

anyhow = { workspace = true }
hex = { workspace = true }
iced = { workspace = true }
iced_core = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }
opener = { workspace = true }
rfd = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[package.metadata.deb]
maintainer = "Marcus Grass <marcus.grass@protonmail.com>"
copyright = "2025, Marcus Grass"
section = "utility"
priority = "optional"
depends = [
    # File picker, could do without
    "libgtk-3-0",
    "libglib2.0-0"
]
assets = [
    ["target/release/p2proxy-desktop", "usr/bin/", "755"],
    ["Readme.md", "usr/share/doc/p2proxy-desktop/README", "644"]
]