[package]
name = "p2proxy-test-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "process"] }
rand = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
