[package]
name = "p2proxyd"
version = "1.0.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
p2proxy-lib = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt", "io-util", "signal"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
