[package]
name = "p2proxyd"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "A peer-to-peer reverse proxy for local TCP connections"

[dependencies]
p2proxy-lib = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt", "io-util", "signal"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[package.metadata.deb]
maintainer = "Marcus Grass <marcus.grass@protonmail.com>"
copyright = "2025, Marcus Grass"
section = "utility"
priority = "optional"
assets = [
    ["target/release/p2proxyd", "usr/bin/", "755"],
    ["Readme.md", "usr/share/doc/p2proxyd/README", "644"]
]