[package]
name = "rust_lib_p2proxy_fl"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
p2proxy-client = { workspace = true }
p2proxy-lib = { workspace = true }

anyhow = { workspace = true }
env_filter = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }
flutter_rust_bridge = "=2.11.1"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { workspace = true }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = { workspace = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
